section of adding new article completed
